src/generated/HTMLParser.java
// Generated from D:/College/Compiler/compiler/src\HTMLParser.g4 by ANTLR 4.9.1
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_COMMENT=1, HTML_CONDITIONAL_COMMENT=2, XML=3, CDATA=4, DTD=5, SCRIPTLET=6, 
		SEA_WS=7, CURLY_OPEN=8, HTML_TEXT=9, SCRIPT_OPEN=10, STYLE_OPEN=11, TAG_OPEN=12, 
		DOUBLE_CURLY_OPEN=13, SCRIPT_BODY=14, SCRIPT_SHORT_BODY=15, STYLE_BODY=16, 
		STYLE_SHORT_BODY=17, CP_INCLUDE=18, CP_PARAMETERS=19, CHANGE=20, FOCUS=21, 
		CP_APP=22, CP_SWITCH=23, CP_SWITCH_CASE=24, CP_SWITCH_DEFAULT=25, CP_SHOW=26, 
		CP_HIDE=27, CP_IF=28, CP_FOR=29, CP_MODEL=30, CLICK=31, MOUSEOVER=32, 
		TAG_NAME=33, TAG_EQUALS=34, TAG_WS=35, TAG_SLASH=36, TAG_SLASH_CLOSE=37, 
		TAG_CLOSE=38, ATTRIBUTE_EQUALS=39, CP_MIDDLE_WS=40, DOUBLE_QUOTE_OPEN=41, 
		DOT=42, COMMA=43, COLON=44, SEMICOLON=45, OPENING_PARENTHESES=46, CLOSING_PARENTHESES=47, 
		OPENING_BRACKET=48, CLOSING_BRACKET=49, QUESTION_MARK=50, PIPE=51, ASSIGNMENT=52, 
		IN=53, TRUE=54, FALSE=55, NULL=56, INDEX=57, AND=58, OR=59, XOR=60, NOT=61, 
		PLUS=62, MINUS=63, MULTIPLICATION=64, DIVISION=65, MODULUS=66, GREATER=67, 
		SMALLER=68, GREATER_EQUALS=69, SMALLER_EQUALS=70, EQUALITY=71, INEQUALITY=72, 
		IDENTIFIER=73, CP_WS=74, NUMBER=75, STRING_LITERAL=76, DQ=77, DOUBLE_CURLY_CLOSE=78, 
		ATTVALUE_VALUE=79, ATTRIBUTE=80;
	public static final int
		RULE_htmlDocument = 0, RULE_element = 1, RULE_attribute = 2, RULE_booleanExpression = 3, 
		RULE_booleanOperator = 4, RULE_equalityOperator = 5, RULE_booleanValue = 6, 
		RULE_comparisonExpression = 7, RULE_comparisonOperator = 8, RULE_arithmeticExpression = 9, 
		RULE_arithmeticOperator = 10, RULE_numericValue = 11, RULE_objectChainedMembers = 12, 
		RULE_objectMember = 13, RULE_accessedArrayElement = 14, RULE_functionCall = 15, 
		RULE_functionArguments = 16, RULE_expression = 17, RULE_forLoop = 18, 
		RULE_array = 19, RULE_arrayElement = 20, RULE_switchE = 21, RULE_switchAttribute = 22, 
		RULE_switchCase = 23, RULE_switchCaseAttribute = 24, RULE_content = 25, 
		RULE_text = 26, RULE_curly = 27, RULE_ternaryOperator = 28, RULE_exprToExecute = 29, 
		RULE_variables = 30, RULE_variable = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"htmlDocument", "element", "attribute", "booleanExpression", "booleanOperator", 
			"equalityOperator", "booleanValue", "comparisonExpression", "comparisonOperator", 
			"arithmeticExpression", "arithmeticOperator", "numericValue", "objectChainedMembers", 
			"objectMember", "accessedArrayElement", "functionCall", "functionArguments", 
			"expression", "forLoop", "array", "arrayElement", "switchE", "switchAttribute", 
			"switchCase", "switchCaseAttribute", "content", "text", "curly", "ternaryOperator", 
			"exprToExecute", "variables", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'{'", null, null, null, 
			null, "'{{'", null, null, null, null, "'cp-include'", "'cp-parameters'", 
			"'@change'", "'@focus'", "'cp-app'", "'cp-switch'", "'cp-switch-case'", 
			"'cp-switchDefault'", "'cp-show'", "'cp-hide'", "'cp-if'", "'cp-for'", 
			"'cp-model'", "'@click'", "'@mouseover'", null, null, null, null, "'/>'", 
			null, null, null, null, "'.'", "','", "':'", "';'", "'('", "')'", "'['", 
			"']'", "'?'", "'|'", null, "'in'", "'true'", "'false'", "'null'", "'index'", 
			null, null, null, null, "'+'", "'-'", "'*'", null, "'%'", null, null, 
			"'>='", "'<='", "'=='", "'!='", null, null, null, null, null, "'}}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", "XML", "CDATA", "DTD", 
			"SCRIPTLET", "SEA_WS", "CURLY_OPEN", "HTML_TEXT", "SCRIPT_OPEN", "STYLE_OPEN", 
			"TAG_OPEN", "DOUBLE_CURLY_OPEN", "SCRIPT_BODY", "SCRIPT_SHORT_BODY", 
			"STYLE_BODY", "STYLE_SHORT_BODY", "CP_INCLUDE", "CP_PARAMETERS", "CHANGE", 
			"FOCUS", "CP_APP", "CP_SWITCH", "CP_SWITCH_CASE", "CP_SWITCH_DEFAULT", 
			"CP_SHOW", "CP_HIDE", "CP_IF", "CP_FOR", "CP_MODEL", "CLICK", "MOUSEOVER", 
			"TAG_NAME", "TAG_EQUALS", "TAG_WS", "TAG_SLASH", "TAG_SLASH_CLOSE", "TAG_CLOSE", 
			"ATTRIBUTE_EQUALS", "CP_MIDDLE_WS", "DOUBLE_QUOTE_OPEN", "DOT", "COMMA", 
			"COLON", "SEMICOLON", "OPENING_PARENTHESES", "CLOSING_PARENTHESES", "OPENING_BRACKET", 
			"CLOSING_BRACKET", "QUESTION_MARK", "PIPE", "ASSIGNMENT", "IN", "TRUE", 
			"FALSE", "NULL", "INDEX", "AND", "OR", "XOR", "NOT", "PLUS", "MINUS", 
			"MULTIPLICATION", "DIVISION", "MODULUS", "GREATER", "SMALLER", "GREATER_EQUALS", 
			"SMALLER_EQUALS", "EQUALITY", "INEQUALITY", "IDENTIFIER", "CP_WS", "NUMBER", 
			"STRING_LITERAL", "DQ", "DOUBLE_CURLY_CLOSE", "ATTVALUE_VALUE", "ATTRIBUTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class HtmlDocumentContext extends ParserRuleContext {
		public List<TerminalNode> SCRIPTLET() { return getTokens(HTMLParser.SCRIPTLET); }
		public TerminalNode SCRIPTLET(int i) {
			return getToken(HTMLParser.SCRIPTLET, i);
		}
		public TerminalNode XML() { return getToken(HTMLParser.XML, 0); }
		public TerminalNode DTD() { return getToken(HTMLParser.DTD, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_htmlDocument);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					match(SCRIPTLET);
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==XML) {
				{
				setState(70);
				match(XML);
				}
			}

			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73);
					match(SCRIPTLET);
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DTD) {
				{
				setState(79);
				match(DTD);
				}
			}

			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(82);
					match(SCRIPTLET);
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCRIPTLET) | (1L << SCRIPT_OPEN) | (1L << STYLE_OPEN) | (1L << TAG_OPEN))) != 0)) {
				{
				{
				setState(88);
				element();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	 
		public ElementContext() { }
		public void copyFrom(ElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ScriptletElementContext extends ElementContext {
		public TerminalNode SCRIPTLET() { return getToken(HTMLParser.SCRIPTLET, 0); }
		public ScriptletElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterScriptletElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitScriptletElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitScriptletElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SwitchElementContext extends ElementContext {
		public SwitchEContext switchE() {
			return getRuleContext(SwitchEContext.class,0);
		}
		public SwitchElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSwitchElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSwitchElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSwitchElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ScriptElementContext extends ElementContext {
		public TerminalNode SCRIPT_OPEN() { return getToken(HTMLParser.SCRIPT_OPEN, 0); }
		public TerminalNode SCRIPT_BODY() { return getToken(HTMLParser.SCRIPT_BODY, 0); }
		public TerminalNode SCRIPT_SHORT_BODY() { return getToken(HTMLParser.SCRIPT_SHORT_BODY, 0); }
		public ScriptElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterScriptElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitScriptElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitScriptElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class HtmlElementContext extends ElementContext {
		public List<TerminalNode> TAG_OPEN() { return getTokens(HTMLParser.TAG_OPEN); }
		public TerminalNode TAG_OPEN(int i) {
			return getToken(HTMLParser.TAG_OPEN, i);
		}
		public List<TerminalNode> TAG_NAME() { return getTokens(HTMLParser.TAG_NAME); }
		public TerminalNode TAG_NAME(int i) {
			return getToken(HTMLParser.TAG_NAME, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(HTMLParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(HTMLParser.TAG_CLOSE, i);
		}
		public TerminalNode TAG_SLASH_CLOSE() { return getToken(HTMLParser.TAG_SLASH_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode TAG_SLASH() { return getToken(HTMLParser.TAG_SLASH, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public HtmlElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StyleElementContext extends ElementContext {
		public TerminalNode STYLE_OPEN() { return getToken(HTMLParser.STYLE_OPEN, 0); }
		public TerminalNode STYLE_BODY() { return getToken(HTMLParser.STYLE_BODY, 0); }
		public TerminalNode STYLE_SHORT_BODY() { return getToken(HTMLParser.STYLE_SHORT_BODY, 0); }
		public StyleElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterStyleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitStyleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		int _la;
		try {
			int _alt;
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new HtmlElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(TAG_OPEN);
				setState(95);
				match(TAG_NAME);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CP_INCLUDE) | (1L << CP_PARAMETERS) | (1L << CHANGE) | (1L << FOCUS) | (1L << CP_APP) | (1L << CP_SHOW) | (1L << CP_HIDE) | (1L << CP_IF) | (1L << CP_FOR) | (1L << CP_MODEL) | (1L << CLICK) | (1L << MOUSEOVER) | (1L << TAG_NAME))) != 0)) {
					{
					{
					setState(96);
					attribute();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TAG_CLOSE:
					{
					setState(102);
					match(TAG_CLOSE);
					setState(113);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(106);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(103);
								content();
								}
								} 
							}
							setState(108);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
						}
						setState(109);
						match(TAG_OPEN);
						setState(110);
						match(TAG_SLASH);
						setState(111);
						match(TAG_NAME);
						setState(112);
						match(TAG_CLOSE);
						}
						break;
					}
					}
					break;
				case TAG_SLASH_CLOSE:
					{
					setState(115);
					match(TAG_SLASH_CLOSE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				_localctx = new SwitchElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				switchE();
				}
				break;
			case 3:
				_localctx = new ScriptletElementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				match(SCRIPTLET);
				}
				break;
			case 4:
				_localctx = new ScriptElementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(SCRIPT_OPEN);
				setState(121);
				_la = _input.LA(1);
				if ( !(_la==SCRIPT_BODY || _la==SCRIPT_SHORT_BODY) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 5:
				_localctx = new StyleElementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				match(STYLE_OPEN);
				setState(123);
				_la = _input.LA(1);
				if ( !(_la==STYLE_BODY || _la==STYLE_SHORT_BODY) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
